--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "testenv1",
+  "name": "telemetry-tool-server",
   "version": "1.0.0",
   "description": "This is the server side of the telemetry tool. It will provide the user with a unique code.",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,6 +11,7 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "path": "^0.12.7"
   }
 }
