--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "telemetry-tool-server",
   "version": "1.0.0",
   "description": "This is the server side of the telemetry tool. It will provide the user with a unique code.",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
